--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,5 @@
+/*トップページ*/
+
 
 /*全体の設定(header/footer込み)
 ---------------------------------------------------------------------------*/
@@ -209,6 +211,11 @@ main {
   .header-top a {
     font-size: 30px;
   }
+
+  .user-name{
+    font-size: 15px;
+  }
+
   .signin a {
     display: block;
     float: right;
@@ -221,6 +228,7 @@ main {
     position: relative;
     list-style: none;
    }
+
    .login a{
      font-size: 20px;
    }
@@ -306,22 +314,22 @@ main {
   .name {
     position: absolute;
     top: 110px;
-    left: 160px;
-    font-size: 18px;
+    left: 80px;
+    font-size: 12px;
   }
 
   .login {
     position: relative;
    }
-   .login a{
-     font-size: 20px;
-   }
+  .login a{
+    font-size: 20px;
+  }
 
-   .mypage1 {
-     position: absolute;
-     top: 60px;
-     left: 200px;
-   }
+  .mypage1 {
+    position: absolute;
+    top: 50px;
+    left: 150px;
+  }
 
   .signin a {
     display: block;
@@ -369,7 +377,7 @@ main {
   ---------------------------*/
   
   .footer {
-    height: 70px;
+    height: 100px;
     font-size: 14.5px;
   }
 }
