--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -7,7 +7,7 @@
   <% end %>
 </div>
 
-<%# //トップページからnicknameの入力結果 %>
+<%# トップページからユーザー検索結果 %>
 <div class="search-users">
    <% if @item == nil %>
     <div class="search-explanation">
@@ -34,5 +34,3 @@
    <% end %>
   </div> 
 </div>
-
-<%# </div> %>
