--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -50,6 +50,7 @@ a {
    padding-right: 20px;
  }
 
+ // ログイン済みのボタン
  .login {
   position: relative;
   list-style: none;
@@ -81,20 +82,17 @@ a {
   font-size: 35px;
 }
 
+// 未ログイン時のボタン
 .signin a {
   display: block;
   float: right;
-  margin: 10px 30px 10px -10px;
+  margin: 10px 20px 10px -20px;
   padding-right: 5px;
   font-size: 20px;
 }
 
-.post1:hover {
+.b:hover {
   background-color: rgba(235, 97, 97, 0);
-  transform: scale(1.3);
-}
-.post2:hover {
-  background-color: rgba(50, 16, 143, 0);
   transform: scale(1.3);
 }
 
@@ -224,7 +222,8 @@ main {
     font-size: 18px;
   }
 
-  .login {
+ // ログイン済みのボタン
+ 　.login {
     position: relative;
     list-style: none;
    }
@@ -238,9 +237,12 @@ main {
      top: -10px;
      right: -10px;
    }
+
+  // 未ログイン時のボタン
    .signin {
     position: relative;
    }
+
    .post1 {
      position: absolute;
      top: 30px;
@@ -249,8 +251,13 @@ main {
    .post2 {
      position: absolute;
      top: 30px;
-     right: 70px;
+     right: 40px;
    }
+   .post3 {
+     position: absolute;
+     top: 30px;
+     right: 120px;
+  }
 
 
   /*main.html.erb
