ページ内、リンク

--- a/app/views/layouts/concept.html.erb
+++ b/app/views/layouts/concept.html.erb
@@ -43,7 +43,7 @@
      </ul>
    </div>
 
-   <div id="last">
+   <div id="message">
      <h4> 最後に</h4>
       <p>一人ひとりが生活を見直し、出来ることを1つずつ取り組んでいきましょう！</p>
       <p>食品を購入する前に、一度冷蔵庫の状況を確認してみませんか？</p><br>
