--- a/app/assets/stylesheets/user/concept.scss
+++ b/app/assets/stylesheets/user/concept.scss
@@ -91,7 +91,7 @@
 }
 
 #food-loss p {
-  font-size: 14px;
+  font-size: 20px;
 }
 
 #todo h4{
@@ -113,7 +113,7 @@
   text-align: left;
  }
 
-#last h4{
+#message h4{
   margin-bottom: 20px;
 	padding: 0 20px;
 	font-size: 20px;
@@ -122,6 +122,7 @@
 	color: #fff;
 	border-radius: 100px;
 }
+
 
 .back-top-page {
   margin-bottom: 100px;
@@ -210,7 +211,7 @@
     display: list-item;
   }
 
-  #last p {
+  #message p {
     font-size: 7px;
   }
 }
@@ -230,7 +231,9 @@
   .concept-image {
     position: relative;
     height: 60vh;
-    background-color: cornflowerblue;
+    background-image: image-url("breakfast-1869132_640.jpg");
+    background-color:rgba(255,255,255,0.7);
+    background-blend-mode:lighten;
   }
 
   .btn-concept p{
@@ -303,6 +306,6 @@
    }
 
   .back-top-page{
-    margin-bottom: 15px;
+    margin-bottom: 50px;
   }
 }
