メッセージ文の修正

--- a/app/views/layouts/concept.html.erb
+++ b/app/views/layouts/concept.html.erb
@@ -18,20 +18,25 @@
     <b><p>本サービスは、「<span>家庭内</span>の食品ロス」を減らすために考えられたものです。</p><br></b>
      <p>皆さんは、このような経験ありませんか？</p><br>
     <ul>
-     <li>冷蔵庫の奥から、いつ購入したか分からない納豆1パック出てきた。</li>
-     <li>安くなっていたから購入した野菜を、使わずに捨ててしまった。</li>
-     <li>家にあると思っていた調味料が、無くて思うような料理が出来なかった。</li><br>
+     <li>冷蔵庫から、いつ購入したか分からない納豆1パック出てきた。</li>
+     <li>安くなっていたから購入した野菜を、使わずに捨ててしまった。</li><br>
     </ul> 
-     <p>このような状況が日常の日本では、食品ロスが社会問題になっています。<br>
-        主な原因として、「食べ残し・傷んでいた・賞味/賞味期限切れ」などが挙げられています。</p><br>
+     <p>このように食べられる食材が捨てられています。<br>
+     　　上記の状況が日常の日本では、食品ロスが社会問題になっています。</p><br>
   </div>
 
   <div id="food-loss">
     <h4>食品ロスの現状</h4>
      <p>食品ロスとは、食べられるのに捨てられている食品のことを指します。</p>
-     <p>日本の食品ロスは年間約600万トンと推計され、<br>その半分が家庭からの食品ロス（約300万トン）になります。</p>
-     <p>現在では各自治体で対策が講じられるなどと、<br>食品ロスの削減への取り組みが増加しています。</p>
-     <p>私たち、一人ひとりも家庭内で出来ることに取り組んでみませんか？</p><br>
+     <p>日本の食品ロスの現状は年間約600万トンと推計されています。<br>
+     　　その半分が家庭からの食品ロス（約300万トン）になります。</p><br>
+
+     <p>家庭内の食品ロスの原因は3つあります。</p>
+     <p>①食べ残し　②購入後の傷み　③賞味/賞味期限切れ<p><br>
+
+     <p>現状を踏まえて、冷蔵庫の管理が重要だと考えました。<p><br>
+
+     <p>家庭内の食品ロスを減らすために、家庭内で出来ることを紹介しています。</p>
   </div>
     
   <div id="todo">
@@ -41,12 +46,13 @@
       <li> 作りすぎない</li>
       <li> 冷蔵庫内を知っておくこと</li><br>
      </ul>
+     <p>本アプリでは、上記の3点をお手伝いさせて頂きます。</p><br>
    </div>
 
    <div id="message">
      <h4> 最後に</h4>
-      <p>一人ひとりが生活を見直し、出来ることを1つずつ取り組んでいきましょう！</p>
-      <p>食品を購入する前に、一度冷蔵庫の状況を確認してみませんか？</p><br>
+      <p>家庭内の食品ロス300万トンがあれば、救える命はたくさんあったでしょう。</p>
+      <p>一度冷蔵庫の状況を確認してから購入を検討しませんか？</p><br>
    </div>
    
 
