ページ内、遷移

--- a/app/assets/stylesheets/user/concept.scss
+++ b/app/assets/stylesheets/user/concept.scss
@@ -1,6 +1,8 @@
 /* コンセプトページ
 ---------------------------------------------------------------------------*/
-
+html {
+  scroll-behavior: smooth;
+}
 
 .concept-main {
  height: 100%;
