ボタンの修正

--- a/app/assets/stylesheets/user/concept.scss
+++ b/app/assets/stylesheets/user/concept.scss
@@ -125,9 +125,18 @@ html {
   border-radius: 100px;
 }
 
-
-.back-top-page {
-  margin-bottom: 100px;
+.back-top-page a{
+  width: 130px;
+  height: 90px;
+  display: inline-block;
+  border-radius: 50%;
+  padding-top: 33px;
+  background-color:black;
+  color: #fff;
+  font-weight: bold;
+  position: relative;
+  left: 700px;
+  bottom: 100px;
 }
 
 
@@ -215,6 +224,19 @@ html {
 
   #message p {
     font-size: 7px;
+  }
+
+  .back-top-page a{
+    width: 130px;
+    height: 20px;
+    display: inline-block;
+    border-radius: 10%;
+    padding-top: 10px;
+    background-color:black;
+    color: #fff;
+    position: relative;
+    left: 0px;
+    bottom: 0px;
   }
 }
 
