--- a/app/views/layouts/concept.html.erb
+++ b/app/views/layouts/concept.html.erb
@@ -36,7 +36,7 @@
 
      <p>現状を踏まえて、冷蔵庫の管理が重要だと考えました。<p><br>
 
-     <p>家庭内の食品ロスを減らすために、家庭内で出来ることを紹介しています。</p>
+     <p>家庭内の食品ロスを減らすために、家庭内で出来ることを紹介しています。</p><br>
   </div>
     
   <div id="todo">
@@ -55,7 +55,6 @@
       <p>一度冷蔵庫の状況を確認してから購入を検討しませんか？</p><br>
    </div>
    
-
     <div class="back-top-page">
       <%=link_to 'トップページに戻る', root_path, class:"back-page" %>
     </div>
