ボタンの作成

--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,6 +1,6 @@
 <%= render "devise/shared/header" %>
 
-<div class="search">
+<div class="search",id="#">
   <%= form_with(url: search_users_path, local: true, method: :get, class: "search-form") do |f| %>
     <%= f.text_field :nickname, placeholder: "ユーザー名で検索できます", class: "search-input" %>
     <%= f.submit "検索", class: "search-btn" %>
@@ -30,7 +30,11 @@
         <%= "メモ：#{item.memo}"%><br>
       </div> 
     <% end %>
-  </div>
-   <% end %>
+    <div class="result top-to-page">
+       <%= link_to "先頭に戻る", "#"%>
+    </div>
   </div> 
+   <% end %>
+
+
 </div>
