--- a/app/assets/stylesheets/user/search.css
+++ b/app/assets/stylesheets/user/search.css
@@ -62,6 +62,16 @@
   background-color: rgba(101, 209, 137 ,0.3);
 }
 
+.top-to-page{ 
+  width: 130px;
+  height: 50px;
+  display: inline-block;
+  background-color: paleturquoise;
+  color: black;
+  text-align: center;
+  padding-top: 30px;
+}
+
  /* タブレット表示時 */
 
  @media (max-width: 1024px) {
