--- a/app/views/devise/shared/_header.html.erb
+++ b/app/views/devise/shared/_header.html.erb
@@ -1,7 +1,8 @@
 <header class="header">
 
   <div class="header-top">
-    <div class="title-name"><a href="/">冷蔵庫管理アプリ</a></div>
+    <div class="title-name"><a href="/">
+     <span class="fab fa-telegram"></span>冷蔵庫管理アプリ</a></div>
 
   <% if user_signed_in? %>
     <div class="user-name">
