ボタンの配置修正

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -22,5 +22,10 @@
         </div>
        <% end %>
    <% end %>
+
+    <div class="result top-to-page top">
+       <%= link_to "先頭に戻る", "#"%>
+    </div>
+    
  </div>
 </div>
