--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -28,7 +28,7 @@
         <%= "メモ：#{item.memo}"%><br>
       </div> 
     <% end %>
-    <div class="result top-to-page">
+    <div class="result top-to-page top">
        <%= link_to "先頭に戻る", "#"%>
     </div>
   </div> 
