--- a/app/assets/stylesheets/user/search.css
+++ b/app/assets/stylesheets/user/search.css
@@ -68,6 +68,10 @@
   padding-top: 30px;
 }
 
+.top {
+ display: none;
+}
+
  /* タブレット表示時 */
 
  @media (max-width: 1024px) {
@@ -122,6 +126,10 @@
     justify-content: space-around;
   }
 
+  .top {
+    display: block;
+   }
+
  }
 
 
@@ -169,5 +177,9 @@
     margin-top: 10px;
     font-size: 8px;
   }
+
+  .top {
+    display: block;
+   }
 
 }
