--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -12,6 +12,10 @@ body {
   height: 100%;
 }
 
+*, ::after, ::before {
+  box-sizing: content-box;
+}
+
 /*リンク（全般）設定
 ---------------------------------------------------------------------------*/
 a {
