入力フォームの生成

--- a/app/views/items/lists.html.erb
+++ b/app/views/items/lists.html.erb
@@ -1,13 +1,16 @@
 <div class="container">
     <header class="text-center">
-        <h1>買い物用メモ</h1>
+        <h1>買い物メモ</h1>
+    </header>
+     <form class="date">
+        <input type="date" class="form-control" name="time">
+     </form>
+
    　 <form class="add">
         <input type="text" class="form-control" name="add" placeholder="購入予定の食材を入力ください。">
     　</form>
-    </header>
-
-    <ul class="todos">
-        <!-- javaScript でリストを追加する予定-->
-    </ul>
+      <ul class="lists">
+          <!-- javaScriptでリストを追加-->
+      </ul>
 </div>
 
