--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -11,9 +11,9 @@
 <div class="search-users">
    <% if @item == nil %>
 　　　<div class="search-explanation">
-      <h1>ユーザー名の検索で現在の冷蔵庫内を確認できます。</h1>
-      <h1>検索後に何も表示されない場合は、登録がありません。</h1>
-      <h1>＊食材の追加・編集などはログインが必要です。</h1>
+      <p>ユーザー名の検索で現在の冷蔵庫内を確認できます。</p>
+      <p>検索後に何も表示されない場合は、食材の登録がありません。</p>
+      <p>＊食材の追加・編集などはログインが必要です。</p>
      </div>
     <% else %>
 
