--- a/app/views/items/lists.html.erb
+++ b/app/views/items/lists.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
     <header class="text-center">
-        <h1>買い物メモ</h1>
+        <h1>買い物リスト</h1>
+         <%=link_to 'トップページに戻る', root_path, class:"back-btn" %>
+         
     </header>
      <form class="date">
         <input type="date" class="form-control" name="time">
