--- a/app/views/items/lists.html.erb
+++ b/app/views/items/lists.html.erb
@@ -1,18 +1,20 @@
-<div class="container">
+<%# <div class="container">
     <header class="text-center">
         <h1>買い物リスト</h1>
          <%=link_to 'トップページに戻る', root_path, class:"back-btn" %>
-         
+<%#          
     </header>
      <form class="date">
         <input type="date" class="form-control" name="time">
-     </form>
+     </form> %>
 
-     <form class="add">
+     <%# <form class="add">
         <input type="text" class="form-control" name="add" placeholder="購入予定の食材を入力ください。">
     </form>
       <ul class="lists">
           <!-- javaScriptでリストを追加-->
       </ul>
-</div>
+
+     <script src="lists.js"></script>
+</div> %>
 
