--- a/app/views/items/main.html.erb
+++ b/app/views/items/main.html.erb
@@ -8,7 +8,7 @@
          <%= link_to "コンセプト", concept_path, class: "topic1 fas fa-bell"%>
          <%= link_to "食材一覧", items_path, class: "topic2 fas fa-utensils" %>
          <%= link_to "食材の追加", new_item_path, class: "topic3 fas fa-plus-square" %>
-         <%= link_to '買い物リストの作成', lists_path, class:"topic4 far fa-list-alt" %>
+         <%# <%= link_to '買い物リストの作成', lists_path, class:"topic4 far fa-list-alt" %> 
       </div>
      <% else %>
       <div class="btn-topic">
