買い物リスト作成リセット

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -12,9 +12,9 @@ body {
   height: 100%;
 }
 
-*, ::after, ::before {
-  box-sizing: content-box;
-}
+// *, ::after, ::before {
+//   box-sizing: content-box;
+// }
 
 /*リンク（全般）設定
 ---------------------------------------------------------------------------*/
