--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,7 +11,7 @@
           <%= f.label :nickname %><br />
         </div>
           <div class='field-input'>
-          <%= f.text_area :nickname, autofocus: true, autocomplete: "nickname" , placeholder:"登録する名前を入力ください（最大10文字）",size: "38"%>
+          <%= f.text_area :nickname, autofocus: true, autocomplete: "nickname" , placeholder:"登録名を入力ください（最大10文字）",size: "38"%>
         </div>
       </div>
 
