--- a/app/views/devise/shared/_header.html.erb
+++ b/app/views/devise/shared/_header.html.erb
@@ -10,7 +10,7 @@
         <%= "ユーザー名：#{current_user.nickname}さん"%>
       </div>
      <div class="login">
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete ,class: "mypage1"%>
+        <%= link_to "ログアウト", destroy_user_session_path, method: :delete ,class: "mypage"%>
      </div>
     </div>
     <% else %>
