--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -23,15 +23,15 @@
         <div class="actions">
           <%= f.submit "送信する", class: :form__btn  %>
         </div>
-            <%=link_to 'トップページに戻る', root_path, class:"back-btn" %>
+            <%=link_to 'トップページに戻る', root_path, class:"back-btn " %>
        </div>
       <% end %>
  
     <div class="comment">
       <h6> 投稿コメント </h6>
-      <ul class="comments_lists">
+      <ul class="comments-lists">
         <% @comments.each do |comment|  %>
-          <li class="comments_list">
+          <li class="comments-list">
             <%=  " 投稿日 ：  #{l comment.created_at, format: :short}" %><br>
             <%=  " コメント内容 ： #{comment.text}" %>
           </li> 
