--- a/app/assets/stylesheets/item/new.scss
+++ b/app/assets/stylesheets/item/new.scss
@@ -1,32 +1,36 @@
 /* editアクションと併用 */
 
+// ページ全体の設定
 .items-contents {
  width: 100%;
  height: 100%;
  text-align: center;
 }
 
+// 入力フォームの作成
 .items {
   padding-top: 20px;
   margin: 10px;
   font-size: 30px;
   letter-spacing: 2px;
 
+  // 「必須」の文字の設定
   .necessary {
     color: red;
     font-size: 20px;
   }
-
 }
 
 .item-memo {
   width: 50vh;
 }
 
+// 「登録」ボタン設定
 .sell-btn-contents {
  margin: 20px;
 }
 
+// 「トップページに戻る」の文字の設定
 .back-btn{
   display: block;
   margin-top: 30px;
@@ -34,6 +38,7 @@
   font-size: 20px;
 }
 
+// JavaScriptのselect.jsを適用
 .hidden1,
 .hidden2{
   display: none;
